--- a/index.html
+++ b/index.html
@@ -23,4 +23,7 @@
 <a href="home22.html">home22.html</a>
 <a href="home23.html">home23.html</a>
 <a href="home24.html">home24.html</a>
+<a href="home25.html">home25.html</a>
+<a href="home26.html">home26.html</a>
+<a href="home27.html">home27.html</a>
 </pre>
