--- a/index.html
+++ b/index.html
@@ -26,4 +26,5 @@
 <a href="home25.html">home25.html</a>
 <a href="home26.html">home26.html</a>
 <a href="home27.html">home27.html</a>
+<a href="home27a.html">home27a.html</a>
 </pre>
